fix(FilterButton): 💄 focus visible style
before: generic style
after: match hover style

--- a/src/components/HomeSections/Filters/DoctorOptions/FilterButton/FilterButton.module.css
+++ b/src/components/HomeSections/Filters/DoctorOptions/FilterButton/FilterButton.module.css
@@ -55,3 +55,13 @@
     background: var(--color-blue-900);
   }
 }
+
+.FilterButton:focus-visible {
+  background: var(--color-white);
+  outline: none;
+}
+
+.FilterButton.isActive:focus-visible {
+  background: var(--color-blue-900);
+  outline: none;
+}
